[tool.poetry]
name = "yalexs-ble"
version = "2.4.3"
description = "Bluetooth control of Yale and August locks"
authors = ["J. Nick Koston <nick@koston.org>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/bdraco/yalexs-ble"
documentation = "https://yalexs-ble.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "yalexs_ble", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bdraco/yalexs-ble/issues"
"Changelog" = "https://github.com/bdraco/yalexs-ble/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# Documentation Dependencies
bleak = ">=0.19.0"
bleak-retry-connector = ">=3.4.0"
async-timeout = {version = ">=3.0.0", python = "<3.11"}
cryptography = ">=38.0.0"
lru-dict = ">=1.1.4"
async-interrupt = ">=1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0"
pytest-asyncio = "^0.19.0"

[tool.semantic_release]
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "src/yalexs_ble/__init__.py:__version__"
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=yalexs_ble --cov-report=term-missing:skip-covered"
pythonpath = ["src"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.isort]
profile = "black"
known_first_party = ["yalexs_ble", "tests"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'docs/.*',
    'setup.py',
]

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[[tool.mypy.overrides]]
module = "docs.*"
ignore_errors = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
